 /* $Id: changelog,v 1.991 2000-06-14 18:31:32 sandervl Exp $ */

 2000-06-14: Sander van Leeuwen <sandervl@xs4all.nl>
    - USER32:       Rewrote ExcludeUpdateRgn & GetUpdateRgn
                    Check if update rectangle is emtpy in PM WM_PAINT msg;
                    ignore it when that's the case 
                    -> fixes excessive redrawing in Lotus Notes
    - GDI32:        Put back region apis
                    Rewrote region functions
                    DIB section reversal bugs fixed (as seen in Starcraft install)

 2000-06-14: Patrick Haller <phaller@gmx.net>
    - KERNEL32:     Altered calling of dllEntryPoint() depending on
                    static or dynamic loading if library according
                    to the Win32 documentation. (StarCraft)

 2000-06-13: Sander van Leeuwen <sandervl@xs4all.nl>
    - USER32:       Check if class already exists in RegisterClass(Ex)A/W
                    and return 0 (ERROR_CLASS_ALREADY_EXISTS) if true

 2000-06-12: Patrick Haller <phaller@gmx.net>
    - LZ32:         Updated to current WINE level (minor changes)

 2000-06-11: Patrick Haller <phaller@gmx.net>
    - KERNEL32:     Moved GetNumberFormat to different source file and enhanced
                    it a little (WinRAR shows file sizes)
                    Creating an existing directory does not return an error ?!
                    Updated GetStringTypeA/W and GetStringTypeExA/W

    - SHLWAPI:      Added a whole lot of missing functions, forwarders, stubs
                    Only 50 more to go for IE4 ...

 2000-06-09: Patrick Haller <phaller@gmx.net>
    - COMCTL32:     Added some missing stubs (.9 .10 .389 .390)
    - SHLWAPI:      Added numerous missing functions, some stubs
                    (.1 .2 .3 .4 .5 .6 .7 .8 .9 .10 .11 .12 .13 .14 .15 .16
                     .23 .28 .37 .38 .40 .43 .53 .56 .59 .60 .74 .83 .94 .95
                     .102 .116 .117 .158 .197 .240)

 2000-06-08: Sander van Leeuwen <sandervl@xs4all.nl>